Feature/handle attachments (#11)
* Add basic attachment handling capability

* Add endpoint to get attachment (meta)data

* Expect find and delete operations to operate only on attachment id

* Add way to access http api from python sdk

* Add attachment related environment variables
