# server/openapi.yaml
@@ -392,6 +392,76 @@ paths:
                 $ref: "#/components/schemas/LoginMemberResponseDto"
       tags:
         - Members
+  /agent-attachments/listByMessageId/{messageId}:
+    get:
+      operationId: listByMessageId
+      parameters:
+        - name: messageId
+          required: true
+          in: path
+          schema:
+            type: string
+      responses:
+        "200":
+          description: ""
+      tags:
+        - Agent Attachments
+  /agent-attachments/getById/{attachmentId}:
+    get:
+      operationId: getById
+      parameters:
+        - name: attachmentId
+          required: true
+          in: path
+          schema:
+            type: string
+      responses:
+        "200":
+          description: ""
+          content:
+            application/json:
+              schema:
+                type: object
+      tags:
+        - Agent Attachments
+  /agent-attachments/getById/{attachmentId}/data:
+    get:
+      operationId: getAttachmentDataById
+      parameters:
+        - name: attachmentId
+          required: true
+          in: path
+          schema:
+            type: string
+      responses:
+        "200":
+          description: ""
+      tags:
+        - Agent Attachments
+  /agent-attachments/createMessageAttachmentSync:
+    post:
+      operationId: createSync
+      parameters:
+        - name: projectId
+          required: true
+          in: query
+          schema:
+            type: string
+        - name: agentId
+          required: true
+          in: query
+          schema:
+            type: string
+        - name: messageId
+          required: true
+          in: query
+          schema:
+            type: string
+      responses:
+        "201":
+          description: ""
+      tags:
+        - Agent Attachments
 info:
   title: AgentLabs API
   description: Build AI Agents in minutes, not months.
