# server/src/agent-attachments/dto/create-message-attachment-sync.dto.ts
@@ -1,0 +1,12 @@
+import { IsString } from 'class-validator';
+
+export class CreateMessageAttachmentSyncDto {
+  @IsString()
+  projectId: string;
+
+  @IsString()
+  agentId: string;
+
+  @IsString()
+  messageId: string;
+}
